<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_bot_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/bot_edit_margin"
            android:scrollbars="none"
            tools:context="com.rajora.arun.chat.chit.chitchatdevelopers.activities.BotEditActivity">

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/bot_edit_padding"
		app:elevation="@dimen/bot_edit_elevation">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center"
			android:orientation="vertical"
			android:padding="@dimen/bot_edit_ll_padding">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1">

				<android.support.v7.widget.CardView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:layout_gravity="center"
					android:contentDescription="@string/change_bot_pic_content_description"
					app:cardCornerRadius="@dimen/profile_edit_image_card_radius"
					app:cardElevation="@dimen/profile_edit_image_elevation">

					<ImageView
						android:id="@+id/bot_pic_holder"
						android:layout_width="@dimen/profile_edit_image_dimen"
						android:layout_height="@dimen/profile_edit_image_dimen"
						android:contentDescription="@string/bot_pic"
						android:scaleType="centerCrop"
						android:src="@drawable/empty_profile_pic"/>

					<Button
						android:id="@+id/upload_bot_pic_button"
						android:layout_width="@dimen/profile_edit_image_dimen"
						android:layout_height="wrap_content"
						android:layout_gravity="bottom"
						android:background="#43434313"
						android:fontFamily="Times New Roman"
						android:text="@string/change"
						android:textColor="@android:color/white"/>
				</android.support.v7.widget.CardView>
			</RelativeLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/bot_name_textInputLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:paddingTop="@dimen/bot_edit_text_padding_top"
				app:counterEnabled="true"
				app:counterMaxLength="60">

				<EditText
					android:id="@+id/bot_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/bot_name"
					android:inputType="text"
					android:maxLength="60"
					android:maxLines="1"/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/bot_endpoint_textInputLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:paddingTop="@dimen/bot_edit_text_padding_text"
				app:counterEnabled="true">

				<EditText
					android:id="@+id/bot_link"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/bot_api_endpoint"
					android:inputType="textUri"
					android:maxLines="1"/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/bot_secret_textInputLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:paddingTop="@dimen/bot_edit_text_padding_text"
				app:counterEnabled="true"
				app:counterMaxLength="200">

				<EditText
					android:id="@+id/bot_secret"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/bot_secret_key_optional"
					android:inputType="text"
					android:maxLength="200"
					android:maxLines="1"/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/bot_about_textInputLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:paddingTop="@dimen/bot_edit_text_padding_text"
				app:counterEnabled="true"
				app:counterMaxLength="100">

				<EditText
					android:id="@+id/bot_about"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/about_the_bot"
					android:inputType="text"
					android:maxLength="100"
					android:maxLines="1"/>
			</android.support.design.widget.TextInputLayout>

			<android.support.v7.widget.CardView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="@dimen/bot_edit_text_padding_text"
				android:background="@color/colorAccent"
				app:cardCornerRadius="@dimen/bot_edit_button_radius"
				app:elevation="@dimen/bot_edit_button_elevation">

				<ImageButton
					android:id="@+id/finish_button_bot_upload"
					style="?android:attr/borderlessButtonStyle"
					android:layout_width="@dimen/bot_edit_button_dimen"
					android:layout_height="@dimen/bot_edit_button_dimen"
					android:background="?attr/selectableItemBackgroundBorderless"
					android:contentDescription="@string/save_bot_details"
					android:scaleType="centerCrop"
					android:src="@drawable/ic_done_black_24dp"/>
			</android.support.v7.widget.CardView>
		</LinearLayout>
	</android.support.v7.widget.CardView>
</ScrollView>
