<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_margin="@dimen/profile_edit_margin"
            android:layout_gravity="center">
    <LinearLayout android:gravity="center"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <android.support.v7.widget.CardView
                android:layout_centerInParent="true"
                android:contentDescription="@string/change_profile_pic_content_description"
                android:layout_gravity="center"
                app:cardCornerRadius="@dimen/profile_edit_image_card_radius"
                app:cardElevation="@dimen/profile_edit_image_elevation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/profile_pic_holder"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/profile_pic"
                    android:src="@drawable/empty_profile_pic"
                    android:layout_width="@dimen/profile_edit_image_dimen"
                    android:layout_height="@dimen/profile_edit_image_dimen" />
                <Button
                    android:id="@+id/upload_profile_pic_button"
                    android:layout_width="@dimen/profile_edit_image_dimen"
                    android:layout_gravity="bottom"
                    android:layout_height="wrap_content"
                    android:fontFamily="Times New Roman"
                    android:textColor="@android:color/white"
                    android:background="#43434313"
                    android:text="@string/change"/>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <android.support.design.widget.TextInputLayout
                android:layout_gravity="center"
                android:id="@+id/name_textInputLayout"
                app:counterMaxLength="60"
                app:counterEnabled="true"
                android:layout_marginStart="@dimen/profile_edit_text_margin"
                android:layout_marginEnd="@dimen/profile_edit_text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/profile_name"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="60"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_gravity="center"
                app:counterMaxLength="100"
                app:counterEnabled="true"
                android:layout_marginStart="@dimen/profile_edit_text_margin"
                android:layout_marginEnd="@dimen/profile_edit_text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/profile_about"
                    android:maxLines="1"
                    android:inputType="text"
                    android:maxLength="100"
                    android:hint="@string/hint_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/cancel_button_profile_upload"
                    android:contentDescription="@string/cancel_upload_profile"
                    android:paddingLeft="@dimen/profile_edit_cancel_padding_left"
                    android:paddingTop="@dimen/profile_edit_cancel_padding_top"
                    android:elevation="@dimen/profile_edit_cancel_elevation"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:tint="@android:color/holo_red_dark"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cancel_black_24dp"
                    android:layout_marginTop="@dimen/profile_edit_cancel_margin_top"
                    android:paddingBottom="@dimen/profile_edit_cancel_padding_bottom"
                    android:paddingRight="@dimen/profile_edit_cancel_padding_right"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    style="?android:attr/borderlessButtonStyle"/>
                <ImageButton
	                android:tint="@android:color/holo_green_dark"
	                android:id="@+id/finish_button_profile_upload"
	                android:paddingLeft="@dimen/profile_edit_ok_padding_l"
	                android:paddingTop="@dimen/profile_edit_ok_t"
	                android:elevation="@dimen/profile_edit_ok_elevation"
	                android:contentDescription="@string/submit_profile_pic_content_description"
	                android:layout_width="0dp"
	                android:layout_weight="1"
	                android:layout_marginTop="@dimen/profile_edit_ok_margin_t"
	                android:paddingBottom="@dimen/profile_edit_ok_margin_b"
	                android:paddingRight="@dimen/profile_edit_ok_padding_r"
	                android:layout_height="wrap_content"
	                android:src="@drawable/ic_done_black_24dp"
	                android:background="?attr/selectableItemBackgroundBorderless"
	                style="?android:attr/borderlessButtonStyle"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>